2007-11-07 Igor Zelmanovich <igorz@mainsoft.com>

	* PageParser.cs: fixed initial value of tracemode.

2007-11-07 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: removes '#define MONO_TRACE'.
	It allows to run MONO in release mode without supplementary trace info.	

2007-11-07 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: added missing trace information for NET_2_0

2007-11-06 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs:
	* Page.jvm.cs:
	affects	TARGET_J2EE only:
	validators state (isValid) is restored on GetBack.	

2007-11-06  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: formatting

2007-11-05  Marek Habersack  <mhabersack@novell.com>

	* ClientScriptManager.cs: EventStateFieldName is a constant now.

	* Page.cs: use full control ids when processing post data. Fixes
	bug #317615

2007-11-03  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: need to append a "/" to TemplateSourceDirectory
	before calling VirtualPathUtility.Combine, in order to get the
	correct physical path to the requested file. Combine looks for the
	last occurrence of "/" to determine where the relative paths
	should be joined.

	* MinimizableAttributeTypeConverter.cs: don't throw on null value,
	call the base class method in that case.

	* SimpleWebHandlerParser.cs: don't NRE on a null assembly passed
	to AddAssembly.
	AddAssemblyByName must check the return value of
	Assembly.LoadWithPartialName, as the method doesn't throw on
	missing assembly, it returns null instead.

	* ClientScriptManager.cs: eventValidationArray is serialized in an
	optimized fashion, so that its serialized form occupies only as
	many slots as were actually used. It may result in that an array
	of 0 entries will be serialized and then
	restored. EnsureEventValidationArray takes that into consideration
	now.

2007-11-01  Marek Habersack  <mhabersack@novell.com>

	* Page.cs, ObjectStateFormatter.cs: use the new
	MachineKeySectionUtils class wherever necessary.
